Revision de error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 
 #Configuracion MySQL
-quarkus.datasource.devservices.username=
-quarkus.datasource.devservices.password=
-quarkus.datasource.url=jdbc:mysql://<host>:<port>/<database>
-quarkus.datasource.driver=com.mysql.cj.jdbc.Driver
+#quarkus.datasource.devservices.username=
+#quarkus.datasource.devservices.password=
+#quarkus.datasource.url=jdbc:mysql://<host>:<port>/<database>
+#quarkus.datasource.driver=com.mysql.cj.jdbc.Driver
 
 #Hibernate
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
+#quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.log.sql=true
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mydatabase
+quarkus.datasource.username=myuser
+quarkus.datasource.password=mypassword
